feat: implement full i18n support

--- a/frontend/src/locales/en/auth.json
+++ b/frontend/src/locales/en/auth.json
@@ -1,4 +1,35 @@
 {
+  "welcomeBack": "Welcome Back",
+  "joinArtori": "Join Artori",
+  "signInDescription": "Sign in to your account to continue",
+  "signUpDescription": "Join thousands of students improving their scores",
+  "fullName": "Full Name",
+  "enterFullName": "Enter your full name",
+  "email": "Email",
+  "enterEmail": "Enter your email",
+  "password": "Password",
+  "enterPassword": "Enter your password",
+  "passwordRequirements": "Password Requirements:",
+  "atLeast8Characters": "At least 8 characters",
+  "oneUppercaseLetter": "One uppercase letter",
+  "oneNumber": "One number",
+  "oneSpecialCharacter": "One special character",
+  "passwordRequirementsNotMet": "Password requirements not met",
+  "ensurePasswordRequirements": "Please ensure your password meets all requirements",
+  "nameRequired": "Name is required",
+  "accountCreated": "Account created successfully",
+  "welcomeToArtori": "Welcome to Artori! Please select an exam to get started.",
+  "authenticationFailed": "Authentication failed. Please try again.",
+  "signingIn": "Signing in...",
+  "creatingAccount": "Creating account...",
+  "signInButton": "Sign In",
+  "createAccountButton": "Create Account",
+  "dontHaveAccount": "Don't have an account?",
+  "alreadyHaveAccount": "Already have an account?",
+  "signUpHere": "Sign up here",
+  "signInHere": "Sign in here",
+  "forgotPassword": "Forgot password?",
+  "joinStudents": "Join 10,000+ students worldwide",
   "login": {
     "title": "Welcome Back",
     "subtitle": "Sign in to your account to continue",
