--- a/frontend/src/locales/es/auth.json
+++ b/frontend/src/locales/es/auth.json
@@ -1,4 +1,35 @@
 {
+  "welcomeBack": "Bienvenido de Vuelta",
+  "joinArtori": "Únete a Artori",
+  "signInDescription": "Inicia sesión en tu cuenta para continuar",
+  "signUpDescription": "Únete a miles de estudiantes mejorando sus calificaciones",
+  "fullName": "Nombre Completo",
+  "enterFullName": "Ingresa tu nombre completo",
+  "email": "Email",
+  "enterEmail": "Ingresa tu email",
+  "password": "Contraseña",
+  "enterPassword": "Ingresa tu contraseña",
+  "passwordRequirements": "Requisitos de Contraseña:",
+  "atLeast8Characters": "Al menos 8 caracteres",
+  "oneUppercaseLetter": "Una letra mayúscula",
+  "oneNumber": "Un número",
+  "oneSpecialCharacter": "Un carácter especial",
+  "passwordRequirementsNotMet": "Requisitos de contraseña no cumplidos",
+  "ensurePasswordRequirements": "Por favor asegúrate de que tu contraseña cumpla todos los requisitos",
+  "nameRequired": "El nombre es obligatorio",
+  "accountCreated": "Cuenta creada exitosamente",
+  "welcomeToArtori": "¡Bienvenido a Artori! Por favor selecciona un examen para comenzar.",
+  "authenticationFailed": "Autenticación fallida. Por favor intenta de nuevo.",
+  "signingIn": "Iniciando sesión...",
+  "creatingAccount": "Creando cuenta...",
+  "signInButton": "Iniciar Sesión",
+  "createAccountButton": "Crear Cuenta",
+  "dontHaveAccount": "¿No tienes una cuenta?",
+  "alreadyHaveAccount": "¿Ya tienes una cuenta?",
+  "signUpHere": "Regístrate aquí",
+  "signInHere": "Inicia sesión aquí",
+  "forgotPassword": "¿Olvidaste tu contraseña?",
+  "joinStudents": "Únete a más de 10,000 estudiantes en todo el mundo",
   "login": {
     "title": "Bienvenido de Vuelta",
     "subtitle": "Inicia sesión en tu cuenta para continuar",
