--- a/frontend/src/locales/pt/auth.json
+++ b/frontend/src/locales/pt/auth.json
@@ -1,4 +1,35 @@
 {
+  "welcomeBack": "Bem-vindo de Volta",
+  "joinArtori": "Junte-se ao Artori",
+  "signInDescription": "Entre na sua conta para continuar",
+  "signUpDescription": "Junte-se a milhares de estudantes melhorando suas notas",
+  "fullName": "Nome Completo",
+  "enterFullName": "Digite seu nome completo",
+  "email": "Email",
+  "enterEmail": "Digite seu email",
+  "password": "Senha",
+  "enterPassword": "Digite sua senha",
+  "passwordRequirements": "Requisitos da Senha:",
+  "atLeast8Characters": "Pelo menos 8 caracteres",
+  "oneUppercaseLetter": "Uma letra maiúscula",
+  "oneNumber": "Um número",
+  "oneSpecialCharacter": "Um caractere especial",
+  "passwordRequirementsNotMet": "Requisitos da senha não atendidos",
+  "ensurePasswordRequirements": "Por favor, certifique-se de que sua senha atenda a todos os requisitos",
+  "nameRequired": "Nome é obrigatório",
+  "accountCreated": "Conta criada com sucesso",
+  "welcomeToArtori": "Bem-vindo ao Artori! Por favor, selecione um exame para começar.",
+  "authenticationFailed": "Autenticação falhou. Por favor, tente novamente.",
+  "signingIn": "Entrando...",
+  "creatingAccount": "Criando conta...",
+  "signInButton": "Entrar",
+  "createAccountButton": "Criar Conta",
+  "dontHaveAccount": "Não tem uma conta?",
+  "alreadyHaveAccount": "Já tem uma conta?",
+  "signUpHere": "Cadastre-se aqui",
+  "signInHere": "Entre aqui",
+  "forgotPassword": "Esqueceu a senha?",
+  "joinStudents": "Junte-se a mais de 10.000 estudantes em todo o mundo",
   "login": {
     "title": "Bem-vindo de Volta",
     "subtitle": "Entre na sua conta para continuar",
