--- a/frontend/src/locales/es/common.json
+++ b/frontend/src/locales/es/common.json
@@ -1,4 +1,5 @@
 {
+  "error": "Error",
   "buttons": {
     "login": "Iniciar Sesión",
     "logout": "Cerrar Sesión",
@@ -62,5 +63,11 @@
     "confirmPassword": "Las contraseñas no coinciden",
     "minLength": "Debe tener al menos {{min}} caracteres",
     "maxLength": "Debe tener como máximo {{max}} caracteres"
-  }
+  },
+  "accessDenied": "Acceso Denegado",
+  "tutorAccessDeniedMessage": "No tienes permisos para acceder al panel de tutor. Por favor, contacta a tu administrador si crees que esto es un error.",
+  "studentAccessDeniedMessage": "Necesitas iniciar sesión para acceder al portal de estudiantes.",
+  "returnToHome": "Volver al Inicio",
+  "signOut": "Cerrar Sesión",
+  "signIn": "Iniciar Sesión"
 }
