--- a/frontend/src/locales/pt/common.json
+++ b/frontend/src/locales/pt/common.json
@@ -1,4 +1,5 @@
 {
+  "error": "Erro",
   "buttons": {
     "login": "Entrar",
     "logout": "Sair",
@@ -62,5 +63,11 @@
     "confirmPassword": "As senhas não coincidem",
     "minLength": "Deve ter pelo menos {{min}} caracteres",
     "maxLength": "Deve ter no máximo {{max}} caracteres"
-  }
+  },
+  "accessDenied": "Acesso Negado",
+  "tutorAccessDeniedMessage": "Você não tem permissão para acessar o painel do tutor. Entre em contato com seu administrador se acredita que isso é um erro.",
+  "studentAccessDeniedMessage": "Você precisa fazer login para acessar o portal do estudante.",
+  "returnToHome": "Voltar ao Início",
+  "signOut": "Sair",
+  "signIn": "Entrar"
 }
